# wallet-bot

./: CMakeLists.txt  README.md  docker-compose.yaml  entrypoint.sh
.circleci/: config.yml
wallet-bot/: Config.cpp  Config.hpp  DataParser.cpp  DataParser.hpp  Exception.hpp  HttpClient.cpp  HttpClient.hpp  MongoDbReader.cpp  MongoDbReader.hpp  TelegramBotAPI.cpp  TelegramBotAPI.hpp  main.cpp
